--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,35 +1,34 @@
 .header{
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: 0;
   background-color: rgb(72, 72, 248);
-  width: 100%;
+  width: 100vw;
   height: 30px;
-  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 .form{
   position: relative;
-
+  box-sizing: border-box;
+  display: flex;
 }
 
 .input{
   padding-left: 25px;
-  font-size: 10px;
+  font-size: 14px;
 }
 
-.btn{
+.btn{ 
   position: absolute;
-  top: 32%;
+  top: 15%;
   left: 0%;
+  cursor: pointer;
   border: none;
   border-radius: 50%;
   background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
-
-  
 }
