--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -7,10 +7,13 @@
   padding-bottom: 15px;
 }
 .btn{
+  width: 100px;
+  height: 60px;
   padding: 3, 5;
   background-color: rgb(72, 72, 248);
   color: aliceblue;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  font-size: 14px;
 }
